--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/mqy1023/rn-wheel-picker-china-region#readme",
   "dependencies": {
-    "prop-types": "^15.6.0"
+    "prop-types": "^15.6.0",
+    "react-native-picker-android": "git+https://github.com/jrwm/react-native-picker-android.git"
   }
 }
